# cppcraft

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Makefile  _clang-format  readme.md
cmake/: FindFbthrift.cmake  FindFolly.cmake  FindGoogletest.cmake
doc/: tmpnote.txt
include/: buffer.h  log.h  looper.hpp  skiplist.hpp  socket_ops.h  status.h  testable.h  utils.h
src/: .gitignore  depends.mk  depends_tests.mk  test_c11_xptr.cc
src/app-tester/: Makefile  rocksdb_tester_1.cc
src/common/: Makefile  log.cc
src/educational/: .resource_management.cc.swp  DelReverseN.cc  Makefile  bind.cc  bst.cc  gen_new_topic.sh  leetcode.cc  leetcode_5.cc  list_iterator.cc  ltweek1.cc  misc.cc  mod_tester.cc  movable.cc  move.cc  resource_management.cc  shared_ptr.cc  skiplist.hpp  skiplist_test.cc  stdthread.cc  template_check.cc  tests_for_libhv.cc  virtual.cc
src/include/: buffer.h  io.h  log.h  looper.hpp  posix_ops.h  status.h  utils.h
src/io/: Makefile  buffer.cc  posix_ops.cc  socket_ops.cc  test_buffer.cc  test_looper.cc  test_status.cc
src/tests/: Makefile  rocksdb_tester_prefix-extractor.cc
src/tests-edu/: Makefile  enum-to-string.cc  index_sequence.cc  inheritance.cc  list_iterator.cc  move.cc  parameter_packs.cc  resource_management.cc  template_check.cc  type_traits.cc  virtual.cc
src/tests-edu/fbthrift-example-chatroom/: .gitignore  EchoService.h  Makefile  lib
src/tests-edu/fbthrift-example-echo/: EchoService.cpp  Makefile  echo.thrift  fbthrift  folly  include  thrift
src/utils/: Makefile  log.cc  testable.cc
(+15 files in other folders)
